--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8">
-        <title>This is my webpage</title>
-    </head>
+<html lang="en-us">
+
+  <head>
+    <meta charset="UTF-8">
+    <title>My Bio</title>
+  </head>
 
     <body>
-        <h1> Hello World!</h1>
-        
+        <h1> Yissel Fernandez</h1>
+
+        <img src="https://www.facebook.com/photo.php?fbid=10150162608792073&set=a.444624827072&type=3&theater" alt="Yissel">
+
+        <p>Hello my name is Yissel. I am originally from Queens, New York and have been in Miami, Florida now for 13 years. I am married, have 2 beautiful boys and a chocolate lab named April.</p>
+        <p>I currently work for a non-profit agency ensuring we keep children safe and free of abuse and neglect.</p>
+        This is the website of where I work<strong><a href="http://frcflorida.org"></a>
+        <ul>
+            <li><strong>Email:</strong><a href="#">gr7181@gmail.com</a></li>
+        </ul>
     
         This is <strong><a href="http://frcflorida.org">myjob</a>
 
