--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
   <head>
     <meta charset="UTF-8">
     <title>My Bio</title>
+  <style>
+    h1{margin-bottom: 15px;
+        font-size: 60px;
+        color:aqua;
+        text-align: center;
+        text-decoration: underline;
+        background-color:beige
+    }
+
+    img{
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+  </style>
+
+
+
+
   </head>
 
     <body>
         <h1> Yissel Fernandez</h1>
-
-        
+ 
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSHiBvx5lwb6KPV4bIIKInGlonDhAjP-b-El1munCue9k0bl3P5A" alt="My Favorite Place">
         <p>Hello my name is Yissel. I am originally from Queens, New York and have been in Miami, Florida now for 13 years. I enjoy spending time with my family and the water!</p>
     
