--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <style>
     h1{margin-bottom: 15px;
         font-size: 60px;
-        color:aqua;
+        color:coral;
         text-align: center;
         text-decoration: underline;
-        background-color:beige
+        background-color:cyan
     }
 
     img{
