--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         color:bisque;
         text-align: center;
         text-decoration: underline;
-        background-color:aquamarine
+        background-color:darkturquoise
     }
 
     img{
