--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         color:bisque;
         text-align: center;
         text-decoration: underline;
-        background-color:darkturquoise
-    }
+        background-color:lightcoral    }
 
     img{
         margin-left: auto;
